tests/suite/snapshots/suite__check__tests__check__bad_incomplete_class_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_incomplete_class_1.xi:1:1]
   │
 1 │ class A {}
   · ─────┬────  
   ·      ╰────── Class A does not implement method required in interface
   │
   ├─[tests/check/bad_incomplete_class_1.ixi:2:5]
   │
 2 │     foo(): int
   ·     ─┬─  
   ·      ╰─── Method required here
───╯

